[gd_scene load_steps=12 format=3 uid="uid://bo06ihr0dons1"]

[ext_resource type="Script" uid="uid://dxcmi18ivv4o1" path="res://player.gd" id="1_sweqy"]
[ext_resource type="Script" uid="uid://drulde1ec84hj" path="res://scripts/components/gravity_component.gd" id="4_sweqy"]
[ext_resource type="Script" uid="uid://dksuroetqt32s" path="res://scripts/components/walk_component.gd" id="5_1jxqw"]
[ext_resource type="Script" uid="uid://dlq2qxhg2j3il" path="res://scripts/camera/camera_controller.gd" id="5_2hs0m"]
[ext_resource type="Script" uid="uid://b0jct33h5r1cr" path="res://scripts/components/jump_component.gd" id="6_2hs0m"]
[ext_resource type="Script" uid="uid://gp7pi5lovebm" path="res://scripts/weapons/weapon_controller.gd" id="7_1jxqw"]
[ext_resource type="Script" uid="uid://ckf1jwcbvo6dj" path="res://scripts/weapons/res_weapon.gd" id="8_b26j0"]
[ext_resource type="PackedScene" uid="uid://cy36aygvs66pn" path="res://addons/gdquest_gobot/gobot_skin.tscn" id="9_b26j0"]
[ext_resource type="Resource" uid="uid://di1a5px62283r" path="res://weapons/glock/glock.tres" id="9_n7ghd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v5isc"]
radius = 0.47558594
height = 1.430481

[sub_resource type="SphereShape3D" id="SphereShape3D_n7ghd"]

[node name="CharacterController" type="CharacterBody3D" node_paths=PackedStringArray("weapon_controller", "jump_component", "camera_controller", "visual", "collision", "components")]
collision_layer = 2
script = ExtResource("1_sweqy")
weapon_controller = NodePath("WeaponController")
jump_component = NodePath("JumpComponent")
debug = true
camera_controller = NodePath("CameraController")
visual = NodePath("GobotSkin")
collision = NodePath("CollisionShape3D")
max_step_height = 1.2
components = [NodePath("WalkComponent"), NodePath("GravityComponent"), NodePath("JumpComponent")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.71020794, -1.09192115e-07)
shape = SubResource("CapsuleShape3D_v5isc")

[node name="GobotSkin" parent="." instance=ExtResource("9_b26j0")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Marker3D" type="Marker3D" parent="GobotSkin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.26018453, 0.2631691, 0)

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.931, 0)
script = ExtResource("5_2hs0m")
metadata/_custom_type_script = "uid://dlq2qxhg2j3il"

[node name="SpringArm3D" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1032766, 0.81968415, 0)
shape = SubResource("SphereShape3D_n7ghd")
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="CameraController/SpringArm3D"]
current = true

[node name="GravityComponent" type="Node" parent="."]
script = ExtResource("4_sweqy")
always_active = true
metadata/_custom_type_script = "uid://drulde1ec84hj"

[node name="WalkComponent" type="Node" parent="."]
script = ExtResource("5_1jxqw")
always_active = true
metadata/_custom_type_script = "uid://dksuroetqt32s"

[node name="JumpComponent" type="Node" parent="." node_paths=PackedStringArray("gravity_component")]
script = ExtResource("6_2hs0m")
gravity_component = NodePath("../GravityComponent")
metadata/_custom_type_script = "uid://b0jct33h5r1cr"

[node name="WeaponController" type="Node3D" parent="." node_paths=PackedStringArray("parent_node")]
script = ExtResource("7_1jxqw")
parent_node = NodePath("../GobotSkin/Marker3D")
weapon_list = Array[ExtResource("8_b26j0")]([ExtResource("9_n7ghd")])
fire_from_center_of_screen = true
metadata/_custom_type_script = "uid://gp7pi5lovebm"
